--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ pyzipcode
 zipcodes
 geopy
 pandas
-torch
+torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 scikit-learn
