--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,8 @@ pyzipcode
 zipcodes
 geopy
 pandas
-torch
 scikit-learn
+
+--index-url https://download.pytorch.org/whl/cu118
+--extra-index-url=https://pypi.org/simple
+torch
